[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.0-rc.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
nix = { version = "0.27", features = ["fs"] }
actix-web = "4"
lazy_static = "1.4"
addr2line = "0.21.0"
memmap2 = "0.9.0"
object = "0.32.1"